 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.5rc1

 - [ZBX-2616] bundled DejaVu font upgraded from 2.32 to 2.33 (Richlv)
 - [ZBX-1557] changed process_ping logic to return an error if fping doesn't give a value (or '-') for any of the hosts but outputs something (rudolfs)
 - [ZBX-3430] fixed disappeared hints for "SSH", "Telnet" and "Database Monitor" item types in item form (Vedmak)
 - [ZBX-3578] added arguments to the output when using agent with '-p' or '-t', modified default arguments in win32.c and common.c (rudolfs)
 - [ZBX-3514] removed non "regexp" triggers from item log-form menu (Aly)
 - [ZBX-3584] fixed allowed_hosts set to 'localhost' for items by default (Vedmak)
 - [ZBX-3568] fixed processing of trigger functions with macros in item key parameters in notifications (Sasha)
 - [ZBX-3076] disabled generation of events in case if some items or hosts in trigger expression are not active (Sasha)
 - [ZBX-3562] fixed user macros in map element label expressions (Aly)
 - [ZBXNEXT-508] added dayofmonth to trigger functions (rudolfs)
 - [ZBX-3352] made item Y axis min/max items also change when used in screen with Dynamic enabled (Vedmak)
 - [ZBX-3523] fixed error when open monitoring->maps and last viewed map was removed (Vedmak)
 - [ZBX-3557] fixed possible incorrect usage of internal array pointers in frontend (Aly)
 - [ZBX-2979] fixed trigger function time() test (Aly)
 - [ZBX-3563] fixed host group filter in graph selection popup (Aly)
 - [ZBX-3544] fixed user login method reseting attempts (Aly)
 - [ZBX-3555] fixed possible pollers hang while processing ssh.run[] checks (Sasha)