@@ -94,6 +94,7 @@ New features:
 --------------------------------------------------------------------------------
 Changes for 1.8.5rc1
 
+ - [ZBX-3435] fixed error that sometimes appear after profile edit (Vedmak)
  - [ZBX-2616] bundled DejaVu font upgraded from 2.32 to 2.33 (Richlv)
  - [ZBX-1557] changed process_ping logic to return an error if fping doesn't give a value (or '-') for any of the hosts but outputs something (rudolfs)
  - [ZBX-3430] fixed disappeared hints for "SSH", "Telnet" and "Database Monitor" item types in item form (Vedmak)
